Make sure that focus outline is not hidden by overflow style

--- a/web/css/abstracts/mixins/_typography.less
+++ b/web/css/abstracts/mixins/_typography.less
@@ -91,6 +91,7 @@
         background: linear-gradient(~"rgba(var(--z-layer-bg), 0)", ~"rgba(var(--z-layer-bg), .8)");
         position: absolute;
         bottom: 0;
+        outline-offset: -2px;
         .right(0);
         .left(0);
         .text-align(right);
